#dvbfixerdir=../
#dvbfixer_PROGRAMS=dvbfixer
#dvbfixer_HEADERS=stream.h packetreader.h pashandler.h pmthandler.h
#dvbfixer_SOURCES=dvbfixer.cc stream.cc pashandler.cc pmthandler.cc \
#		 packetreader.cc crc.cc outhandler.cc

dvbparserdir=..
dvbparser_PROGRAMS=dvbparser
dvbparser_SOURCES=stream.cc crc.cc tspacket.cc dvbparser.cc packetreader.cc \
				  logger.cc pashandler.cc
